# pyterraformer

./: .flake8  .gitignore  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  pythonpackage.yml  pythonpublish.yml
docs/: generate_reference_files.py
pyterraformer/: __init__.py  config.py  constants.py  enums.py  exceptions.py  inventory.py  settings.py
pyterraformer/core/: __init__.py  file.py  modules.py  namespace.py  objects.py  utility.py  workspace.py
pyterraformer/core/generics/: __init__.py  backend.py  comment.py  data.py  interpolation.py  local.py  meta_arguments.py  metadata.py  output.py  terraform.py  terraform_block.py  variables.py
pyterraformer/core/resources/: __init__.py  resource_object.py  unknown_resource.py
pyterraformer/executor/: terraform.py
pyterraformer/executor/state_providers/: base_provider.py  gcs_provider.py
pyterraformer/parser/: __init__.py  engine.py  load_templates.py  module.py  resource.py
pyterraformer/parser/generics/: __init__.py  backend.py  comment.py  data.py  interpolation.py  literal.py  local.py  metadata.py  (+5 more)
pyterraformer/serializer/: __init__.py  base_serializer.py  human_serializer.py  load_templates.py
pyterraformer/terraform/: __init__.py  settings.py  terraform.py
pyterraformer/utility/: decorators.py
scripts/: build_all_providers.py  create_provider_stubs.py
tests/: conftest.py  test_human_serializer.py  test_readme.py
tests/test_parsing/: test_parsing_cases.py
(+55 files in other folders)
